[package]
name = "secretary"
version = "0.1.0"
edition = "2021"
include = ["**/*.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = "0.19.0"
egui_extras = "0.19.0"
rfd = "0.10.0"
dirs = "4.0.0"
image = "0.24.3"
